<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/background"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="30dip"
    android:orientation="horizontal" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="25dip"
        android:textSize="24.5sp"
        android:text="@string/main_tittle" />
    <Button
        android:id="@+id/net_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/NetAcessControl_label" />
    <Button
        android:id="@+id/sum_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Trafficstatistics_label" />
    <Button
        android:id="@+id/about_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/About_label" />
    <Button
        android:id="@+id/exit_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Exit_label" />
    
	</LinearLayout>
</LinearLayout>